force-app/main/default/objects/Contact/fields/AgeRange__c.field-meta.xml
<CustomField>
    <fullName>AgeRange__c</fullName>
    <label>AGE RANGE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AgeRange</valueSetName>
    </valueSet>
</CustomField>