force-app/main/default/objects/Contact/fields/KakaoID__c.field-meta.xml
<CustomField>
    <fullName>KakaoID__c</fullName>
    <label>Kakao ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>