force-app/main/default/objects/Contact/fields/LeadSourceBy__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Source By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Lead Source By)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>