force-app/main/default/objects/Contact/fields/LeadSourceNotes__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceNotes__c</fullName>
    <label>Lead Source Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>