force-app/main/default/objects/Contact/fields/MailS__c.field-meta.xml
<CustomField>
    <fullName>MailS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the contact person do not want to receive CloTra automail, check the box and CloTra automail delivery will be stopped.</inlineHelpText>
    <label>DO NOT WANT CARGO TRACKING EMAIL SERVICE</label>
    <type>Checkbox</type>
</CustomField>