force-app/main/default/objects/Contact/fields/Name_sound__c.field-meta.xml
<CustomField>
    <fullName>Name_sound__c</fullName>
    <label>NAME-VERVAL SOUND</label>
    <length>20</length>
    <type>Text</type>
</CustomField>