force-app/main/default/objects/Contact/fields/nationality__c.field-meta.xml
<CustomField>
    <fullName>nationality__c</fullName>
    <label>NATIONALITY</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VIETNAM</fullName>
            </value>
            <value>
                <fullName>CAMBODIA</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>KOREA</fullName>
            </value>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>