force-app/main/default/objects/Contact/fields/Qutation_PIC__c.field-meta.xml
<CustomField>
    <fullName>Qutation_PIC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PIC OF QUOTATION</label>
    <type>Checkbox</type>
</CustomField>