force-app/main/default/objects/Contact/fields/StatusType__c.field-meta.xml
<CustomField>
    <fullName>StatusType__c</fullName>
    <label>STATUS TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACCOUNT_STATUS</valueSetName>
    </valueSet>
</CustomField>