force-app/main/default/objects/Contact/fields/WhatsAppID__c.field-meta.xml
<CustomField>
    <fullName>WhatsAppID__c</fullName>
    <label>WhatsApp ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>