force-app/main/default/objects/Contact/fields/WorkingLocationName__c.field-meta.xml
<CustomField>
    <fullName>WorkingLocationName__c</fullName>
    <label>Working Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>