force-app/main/default/objects/Contact/fields/worktype__c.field-meta.xml
<CustomField>
    <fullName>worktype__c</fullName>
    <label>DEPARTMENT</label>
    <length>25</length>
    <type>Text</type>
</CustomField>