force-app/main/default/objects/Contact/fields/ZaloID__c.field-meta.xml
<CustomField>
    <fullName>ZaloID__c</fullName>
    <label>Zalo ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>