force-app/main/default/objects/Contact/listViews/Org_Contact_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Contact_Hierarchy</fullName>
    <columns>CONTACT.REPORTS_TO.NAME</columns>
    <columns>CONTACT.SALUTATION</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>Gender__c</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Contact_Hierarchy</label>
</ListView>